--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "Yazil Ansari",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "concurrently": "^4.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dialogflow": "^1.2.0",
     "dotenv": "^16.4.7",
     "ejs": "^2.6.1",
@@ -30,6 +32,7 @@
     "fs": "0.0.1-security",
     "html-entities": "^1.2.1",
     "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.24.0",
     "mongoose": "^4.13.21",
     "mssql": "^5.1.0",
@@ -38,6 +41,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.1",
+    "razorpay": "^2.9.6",
     "sequelize": "^6.37.6",
     "uuid": "^7.0.2"
   },
