--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Yazil Ansari",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
