--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ SECRET_KEY=EximeyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiIxMjM0NTYiLCJy
 PORT = 4010
 RAZORPAY_KEY_ID=rzp_test_TmUiraAoARSPLC
 RAZORPAY_KEY_SECRET=L6Kr9O2sf1PHcUedCt10atYg
+EMAIL=sgadway013@gmail.com
+PASSWORD=kzjb yeis gjwc duaq
