--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "html-entities": "^1.2.1",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
-    "moment": "^2.24.0",
+    "moment": "^2.30.1",
     "mongoose": "^4.13.21",
     "mssql": "^5.1.0",
     "multer": "^1.4.1",
-    "nodemailer": "^6.2.1",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.1",
