--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "mongodb": "^6.15.0",
     "mongoose": "^4.13.21",
     "mssql": "^5.1.0",
     "multer": "^1.4.1",
