--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ RAZORPAY_KEY_ID=rzp_test_TmUiraAoARSPLC
 RAZORPAY_KEY_SECRET=L6Kr9O2sf1PHcUedCt10atYg
 EMAIL=sgadway013@gmail.com
 PASSWORD=kzjb yeis gjwc duaq
-CLIENT_URL=http://192.168.1.9:3000/eximApp
+CLIENT_URL=http://192.168.1.9:3000/
